cmake_minimum_required(VERSION 3.31)
project(cpp_practice)

set(CMAKE_CXX_STANDARD 20)

# 定义一个函数来添加可执行文件并自动设置输出目录
function(add_exe_with_output_dir target_name source_file)
    add_executable(${target_name} ${source_file})
    get_filename_component(output_dir ${source_file} DIRECTORY)
    if(output_dir)
        set_target_properties(${target_name} PROPERTIES
            RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${output_dir})
    else()
        set_target_properties(${target_name} PROPERTIES
            RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
    endif()
endfunction()

# 使用函数添加所有可执行文件
add_exe_with_output_dir(practice_21 Chapter_2/practice_1.cpp)
add_exe_with_output_dir(practice_22 Chapter_2/practice_1.cpp)
add_exe_with_output_dir(practice_23 Chapter_2/practice_1.cpp)
add_exe_with_output_dir(practice_24 Chapter_2/practice_1.cpp)
add_exe_with_output_dir(practice_25 Chapter_2/practice_1.cpp)
add_exe_with_output_dir(practice_26 Chapter_2/practice_1.cpp)
add_exe_with_output_dir(practice_27 Chapter_2/practice_1.cpp)
add_exe_with_output_dir(practice_31 Chapter_3/practice_1.cpp)
add_exe_with_output_dir(practice_32 Chapter_3/practice_2.cpp)
add_exe_with_output_dir(practice_33 Chapter_3/practice_3.cpp)
add_exe_with_output_dir(practice_34 Chapter_3/practice_4.cpp)
add_exe_with_output_dir(practice_35 Chapter_3/practice_5.cpp)
add_exe_with_output_dir(practice_36 Chapter_3/practice_6.cpp)
add_exe_with_output_dir(practice_37 Chapter_3/practice_7.cpp)
add_exe_with_output_dir(practice_41 Chapter_4/practice_1.cpp)
add_exe_with_output_dir(practice_42 Chapter_4/practice_2.cpp)
add_exe_with_output_dir(practice_43 Chapter_4/practice_3.cpp)
add_exe_with_output_dir(practice_44 Chapter_4/practice_4.cpp)
add_exe_with_output_dir(practice_45 Chapter_4/practice_5.cpp)
add_exe_with_output_dir(practice_46 Chapter_4/practice_6.cpp)
add_exe_with_output_dir(practice_47 Chapter_4/practice_7.cpp)
add_exe_with_output_dir(practice_48 Chapter_4/practice_8.cpp)
add_exe_with_output_dir(practice_49 Chapter_4/practice_9.cpp)
add_exe_with_output_dir(practice_410 Chapter_4/practice_10.cpp)
add_exe_with_output_dir(practice_51 Chapter_5/practice_1.cpp)
add_exe_with_output_dir(practice_52 Chapter_5/practice_2.cpp)
add_exe_with_output_dir(practice_53 Chapter_5/practice_3.cpp)
add_exe_with_output_dir(practice_54 Chapter_5/practice_4.cpp)
add_exe_with_output_dir(practice_55 Chapter_5/practice_5.cpp)
add_exe_with_output_dir(practice_56 Chapter_5/practice_6.cpp)
add_exe_with_output_dir(practice_57 Chapter_5/practice_7.cpp)
add_exe_with_output_dir(practice_58 Chapter_5/practice_8.cpp)
#add_exe_with_output_dir(practice_59 Chapter_5/practice_9.cpp)
#add_exe_with_output_dir(practice_510 Chapter_5/practice_10.cpp)